// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsvDropzone matches snapshot with a bad file 1`] = `
<div
  className="CsvDropzone-root-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    autoComplete="off"
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter"
  >
    <svg
      className="CsvDropzone-menuIcon-2"
      role="presentation"
      style={
        Object {
          "height": "1.5rem",
          "width": "1.5rem",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M14,2L20,8V20C20,21.1 19.1,22 18,22H6C4.9,22 4,21.1 4,20V4C4,2.9 4.9,2 6,2H14M18,20V9H13V4H6V20H18M12,12L16,16H13.5V19H10.5V16H8L12,12Z"
        style={
          Object {
            "fill": "textSecondary",
          }
        }
      />
    </svg>
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorError MuiTypography-alignCenter"
  >
    Some error
  </h6>
</div>
`;

exports[`CsvDropzone matches snapshot with a good file 1`] = `
<div
  className="CsvDropzone-root-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    autoComplete="off"
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter"
  >
    <svg
      className="CsvDropzone-menuIcon-2"
      role="presentation"
      style={
        Object {
          "height": "1.5rem",
          "width": "1.5rem",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M14,2L20,8V20C20,21.1 19.1,22 18,22H6C4.9,22 4,21.1 4,20V4C4,2.9 4.9,2 6,2H14M18,20V9H13V4H6V20H18M12,12L16,16H13.5V19H10.5V16H8L12,12Z"
        style={
          Object {
            "fill": "textSecondary",
          }
        }
      />
    </svg>
  </h6>
</div>
`;

exports[`CsvDropzone matches snapshot without a file 1`] = `
<div
  className="CsvDropzone-root-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    autoComplete="off"
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div>
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      Drag a CSV file here
    </h4>
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      or click to select a file to upload.
    </h6>
  </div>
</div>
`;
